Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-7055

test_avro_writer failing on upstream Jenkins (Expected exception: "Writing to table format AVRO is not supported")

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    Description

      This failure occurred while verifying https://gerrit.cloudera.org/c/10455/, but it is not related to that patch. The failing build is https://jenkins.impala.io/job/gerrit-verify-dryrun/2511/ (https://jenkins.impala.io/job/ubuntu-16.04-from-scratch/2232/)

      Test appears to be (from avro-writer.test):

      ---- QUERY
      SET ALLOW_UNSUPPORTED_FORMATS=0;
      insert into __avro_write select 1, "b", 2.2;
      ---- CATCH
      Writing to table format AVRO is not supported. Use query option ALLOW_UNSUPPORTED_FORMATS
      

      Error output:

      01:50:18 ] FAIL query_test/test_compressed_formats.py::TestTableWriters::()::test_avro_writer[exec_option: {'batch_size': 0, 'num_nodes': 0, 'disable_codegen_rows_threshold': 5000, 'disable_codegen': False, 'abort_on_error': 1, 'debug_action': None, 'exec_single_node_rows_threshold': 0} | table_format: text/none]
      01:50:18 ] =================================== FAILURES ===================================
      01:50:18 ]  TestTableWriters.test_avro_writer[exec_option: {'batch_size': 0, 'num_nodes': 0, 'disable_codegen_rows_threshold': 5000, 'disable_codegen': False, 'abort_on_error': 1, 'debug_action': None, 'exec_single_node_rows_threshold': 0} | table_format: text/none] 
      01:50:18 ] [gw9] linux2 -- Python 2.7.12 /home/ubuntu/Impala/bin/../infra/python/env/bin/python
      01:50:18 ] query_test/test_compressed_formats.py:189: in test_avro_writer
      01:50:18 ]     self.run_test_case('QueryTest/avro-writer', vector)
      01:50:18 ] common/impala_test_suite.py:420: in run_test_case
      01:50:18 ]     assert False, "Expected exception: %s" % expected_str
      01:50:18 ] E   AssertionError: Expected exception: Writing to table format AVRO is not supported. Use query option ALLOW_UNSUPPORTED_FORMATS
      01:50:18 ] ---------------------------- Captured stderr setup -----------------------------
      01:50:18 ] -- connecting to: localhost:21000
      01:50:18 ] ----------------------------- Captured stderr call -----------------------------
      01:50:18 ] -- executing against localhost:21000
      01:50:18 ] use functional;
      01:50:18 ] 
      01:50:18 ] SET batch_size=0;
      01:50:18 ] SET num_nodes=0;
      01:50:18 ] SET disable_codegen_rows_threshold=5000;
      01:50:18 ] SET disable_codegen=False;
      01:50:18 ] SET abort_on_error=1;
      01:50:18 ] SET exec_single_node_rows_threshold=0;
      01:50:18 ] -- executing against localhost:21000
      01:50:18 ] drop table if exists __avro_write;
      01:50:18 ] 
      01:50:18 ] -- executing against localhost:21000
      01:50:18 ] SET COMPRESSION_CODEC=NONE;
      01:50:18 ] 
      01:50:18 ] -- executing against localhost:21000
      01:50:18 ] 
      01:50:18 ] create table __avro_write (i int, s string, d double)
      01:50:18 ] stored as AVRO
      01:50:18 ] TBLPROPERTIES ('avro.schema.literal'='{
      01:50:18 ]                   "name": "my_record",
      01:50:18 ]                   "type": "record",
      01:50:18 ]                   "fields": [
      01:50:18 ]                   {"name":"i", "type":["int", "null"]},
      01:50:18 ]                   {"name":"s", "type":["string", "null"]},
      01:50:18 ]                   {"name":"d", "type":["double", "null"]}]}');
      01:50:18 ] 
      01:50:18 ] -- executing against localhost:21000
      01:50:18 ] SET COMPRESSION_CODEC="";
      01:50:18 ] 
      01:50:18 ] -- executing against localhost:21000
      01:50:18 ] SET COMPRESSION_CODEC=NONE;
      01:50:18 ] 
      01:50:18 ] -- executing against localhost:21000
      01:50:18 ] 
      01:50:18 ] SET ALLOW_UNSUPPORTED_FORMATS=1;
      01:50:18 ] 
      01:50:18 ] -- executing against localhost:21000
      01:50:18 ] 
      01:50:18 ] insert into __avro_write select 0, "a", 1.1;
      01:50:18 ] 
      01:50:18 ] -- executing against localhost:21000
      01:50:18 ] SET COMPRESSION_CODEC="";
      01:50:18 ] 
      01:50:18 ] -- executing against localhost:21000
      01:50:18 ] SET ALLOW_UNSUPPORTED_FORMATS="0";
      01:50:18 ] 
      01:50:18 ] -- executing against localhost:21000
      01:50:18 ] SET COMPRESSION_CODEC=SNAPPY;
      01:50:18 ] 
      01:50:18 ] -- executing against localhost:21000
      01:50:18 ] 
      01:50:18 ] SET ALLOW_UNSUPPORTED_FORMATS=1;
      01:50:18 ] 
      01:50:18 ] -- executing against localhost:21000
      01:50:18 ] 
      01:50:18 ] insert into __avro_write select 1, "b", 2.2;
      01:50:18 ] 
      01:50:18 ] -- executing against localhost:21000
      01:50:18 ] SET COMPRESSION_CODEC="";
      01:50:18 ] 
      01:50:18 ] -- executing against localhost:21000
      01:50:18 ] SET ALLOW_UNSUPPORTED_FORMATS="0";
      01:50:18 ] 
      01:50:18 ] -- executing against localhost:21000
      01:50:18 ] select * from __avro_write;
      01:50:18 ] 
      01:50:18 ] -- executing against localhost:21000
      01:50:18 ] SET ALLOW_UNSUPPORTED_FORMATS=0;
      01:50:18 ] 
      01:50:18 ] -- executing against localhost:21000
      01:50:18 ] 
      01:50:18 ] insert into __avro_write select 1, "b", 2.2;
      01:50:18 ] 
      01:50:18 ] -- executing against localhost:21000
      01:50:18 ] SET ALLOW_UNSUPPORTED_FORMATS="0";
      01:50:18 ] 
      01:50:18 ] = 1 failed, 1939 passed, 80 skipped, 44 xfailed, 1 xpassed in 2025.77 seconds ==

      Attachments

        Issue Links

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            tarmstrong Tim Armstrong
            dknupp David Knupp
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment